Fix Job Listing Title Wrap

--- a/apps/redi-talent-pool/src/pages/app/job-listing/JobListing.scss
+++ b/apps/redi-talent-pool/src/pages/app/job-listing/JobListing.scss
@@ -153,7 +153,6 @@
     align-items: center;
 
     @include tablet() {
-      flex-wrap: wrap;
       text-overflow: ellipsis;
       white-space: none;
     }
@@ -181,7 +180,6 @@
       line-height: 40px;
       overflow: hidden;
       display: -webkit-box;
-      -webkit-box-orient: vertical;
       -webkit-line-clamp: 2; /* Limits the text to 2 lines */
       text-overflow: ellipsis;
       max-height: 80px;
